# ComfyUI-AniPortrait

./: README.md  champ+aniportrait.json  nodes.py  pyproject.toml  requirements.txt  wf.json
src/audio_models/: torch_utils.py
src/dataset/: dataset_face.py
src/models/: mutual_self_attention.py  pose_guider.py
src/pipelines/: pipeline_pose2img.py  pipeline_pose2vid.py  pipeline_pose2vid_long.py
src/utils/: mp_utils.py
